--- a/app/views/hearings/testing.html
+++ b/app/views/hearings/testing.html
@@ -10,39 +10,50 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-xl">
-            Hearings prototype
+            Hearings
         </h1>
 
 
+
+        <p class="govuk-!-font-weight-bold">User testing</p>
+
         <p>Links open in a new tab.</p>
 
-        <p><a target="_blank" href="/hearings/first">No hearings / Request first hearing</a></p>
+        <p><a target="_blank" href="/hearings/first">Scenario 1</a></p>       <!-- First hearing</a></p> -->
 
-        <p><a target="_blank" href="/hearings/firstalt">No hearings / Request first hearing - Starting from check answers</a></p>
+        <p><a target="_blank" href="/hearings/firstalt">Scenario 2</a></p>       <!--First hearing alternative</a></p>-->
 
-        <p><a target="_blank" href="/hearings/third">2 hearings / Request a 3rd hearing</a></p>
 
-        <p><a target="_blank" href="/hearings/after10mins">10 mins after submission</a></p>
+        <p><a target="_blank" href="/hearings/after10mins">Scenario 3</a></p>       <!--After 10 mins</a></p>-->
 
-        <p><a target="_blank" href="/hearings/aftermonth">After a month after submission</a></p>
+        <p><a target="_blank" href="/hearings/aftermonth">Scenario 4</a></p>       <!--After a month</a></p>-->
+
+        <p><a target="_blank" href="/hearings/all">Scenario 5</a></p>       <!--All states</a></p>-->
+
+        <br>
+        <br>
+        <br>
+
+        <!--  <p><a target="_blank" href="/noticeofchange/solicitor/caselist?hideone=false&hidetwo=false&hidethree=false&stoppingoutcome=auto&caselist=financialremedy&">Caselist - Financial Remedy</a></p>  -->
+
+        <p><a target="_blank" href="/hearings/third">3rd hearing</a></p>
+
 
         <p><a target="_blank" href="/hearings/aftersubmission">After submission</a></p>
 
-        <p><a target="_blank" href="/hearings/all">Show all states</a></p>
 
-        <p><a target="_blank" href="/hearings/pages/confirmation?confimationerror=true&">Error on submission</a></p>
 
         <br>
         <br>
+
+
+
+
         <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
 
 
 
