--- a/app/views/hearings/pages/confirmation.html
+++ b/app/views/hearings/pages/confirmation.html
@@ -12,8 +12,23 @@ Case details
         <div class="govuk-grid-row"  style="max-width:1860px; margin: 0 auto;">
             <div class="govuk-tabs__panel" id="event" style=" padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px; min-height: 300px;">
 
+                {% if data.confimationerror == 'true' %}
+                <a href="#" class="govuk-back-link govuk-!-margin-bottom-6" onclick="goBack();">Back</a>
+
+                <div class="govuk-tabs__panel" id="event" style="padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px; min-height: 300px;">
 
 
+                    <h2 class="govuk-heading-m"> Soemthing went wrong</h2>
+
+                    <p class="govuk-body">
+                         Placeholder advice to help user comnplete their task.
+                    </p>
+
+                    <p><a href="#">Link to complete task</a></p>
+
+
+
+                {%  else  %}
                         <div class="govuk-grid-column-two-thirds govuk-!-margin-top-9 govuk-!-padding-0">
                             <div class="govuk-panel govuk-panel--confirmation" style="background-color: #00703c">
                                 <h1 class="govuk-panel__title">
@@ -41,11 +56,38 @@ Case details
                             </p>
                         </div>
 
+                {% endif %}
 
 
 
             </div>
         </div>
     </main>
+
+
+
+
+
+
+
+
+<div style="width:400px;">
+
+    <form method="post"  action="#" class="for4" style=" float: left; margin-top: 140px;">
+        <p style="margin-bottom:0px;">Error on submission</p>
+        <select style="height:25px;" onchange="window.location.href='?'+this.value">
+
+            <option value="confimationerror=false&"
+                    {% if data.confimationerror != 'true'    %}selected{% endif %}
+            >No error</option>
+
+            <option value="confimationerror=true&"
+                    {% if data.confimationerror == 'true'    %}selected{% endif %}
+            >Error</option>
+
+        </select>
+    </form>
+
+</div>
 
 {% endblock %}
