--- a/app/views/hearings/pages/panel.html
+++ b/app/views/hearings/pages/panel.html
@@ -32,8 +32,8 @@ Case details
                                         </thead>
                                         <tbody class="govuk-table__body">
                                             <tr class="govuk-table__row">
-                                                <th scope="row" class="govuk-table__header" style="font-weight: 400;">20 July 2021</th>
-                                                <td class="govuk-table__cell">Judge Jane Smith<br>Dr David Naran</td>
+                                                <th scope="row" class="govuk-table__header" style="font-weight: 400;">Most recent hearing<br>20 July 2021</th>
+                                                <td class="govuk-table__cell">Judge Jane Smith<br>Dr David Naran<br>Penny Williams</td>
                                             </tr>
                                             <tr class="govuk-table__row">
                                                 <th scope="row" class="govuk-table__header" style="font-weight: 400;">14 April 2021</th>
@@ -45,39 +45,33 @@ Case details
 
 
 
-                            <div class="govuk-form-group govuk-!-margin-top-5">
-                                <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
-                                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                                        <h3 class="govuk-fieldset__heading">
-                                            Use the most recent panel again?
-                                        </h3>
-                                    </legend>
-                                    <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
+                                <div class="govuk-form-group govuk-!-margin-top-5">
+                                    <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
+                                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                                            <h3 class="govuk-fieldset__heading">
+                                                Use the most recent panel again?
+                                            </h3>
+                                        </legend>
+                                        <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
 
-                                        <div class="govuk-radios__item">
-                                            <input class="govuk-radios__input" id="panel-1" name="panelsame" type="radio" value="Yes - use the same panel as most recent hearing" {% if data.panelsame == 'Yes - use the same panel as most recent hearing' %} Checked {% endif %}>
-                                            <label class="govuk-label govuk-radios__label" for="panel-1"  onclick="showJudges();">
-                                                Yes - use the same panel as most recent hearing
-                                            </label>
+                                            <div class="govuk-radios__item">
+                                                <input class="govuk-radios__input" id="panel-1" name="panelsame" type="radio" value="Yes - use the same panel as most recent hearing" {% if data.panelsame == 'Yes - use the same panel as most recent hearing' %} Checked {% endif %}>
+                                                <label class="govuk-label govuk-radios__label" for="panel-1"  onclick="showJudges();">
+                                                    Yes - use the same panel as most recent hearing
+                                                </label>
+                                            </div>
+
+                                            <div class="govuk-radios__item">
+                                                <input class="govuk-radios__input" id="panel-2" name="panelsame" type="radio" value="No - select a new panel"  {% if data.panelsame == 'No - select a new panel' %}  Checked {% endif %} >
+                                                <label class="govuk-label govuk-radios__label" for="panel-2" onclick="hideJudges(); ">
+                                                    No - select a new panel
+                                                </label>
+                                            </div>
+
                                         </div>
 
-                                        <div class="govuk-radios__item">
-                                            <input class="govuk-radios__input" id="panel-2" name="panelsame" type="radio" value="No - select a new panel"  {% if data.panelsame == 'No - select a new panel' %}  Checked {% endif %} >
-                                            <label class="govuk-label govuk-radios__label" for="panel-2" onclick="hideJudges(); ">
-                                                No - select a new panel
-                                            </label>
-                                        </div>
-
-                                    </div>
-
-                                </fieldset>
-                            </div>
-
-
-
-
-
-
+                                    </fieldset>
+                                </div>
 
 
 
