--- a/app/views/hearings/pages/timing.html
+++ b/app/views/hearings/pages/timing.html
@@ -14,6 +14,23 @@ Case details
 
                 <a href="#" class="govuk-back-link govuk-!-margin-bottom-6" onclick="goBack();">Back</a>
 
+                {% if data.calendarclash == 'true' %}
+                    <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+                        <h2 class="govuk-error-summary__title" id="error-summary-title">
+                            There is a problem
+                        </h2>
+                        <div class="govuk-error-summary__body">
+                            <ul class="govuk-list govuk-error-summary__list">
+                                <li>
+                                    <a href="#datesnotavailable">The date or date range you've entered is during a time where at least one party is unavailable. </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                {% endif %}
+
+
+
                         <h2 class="govuk-heading-m">When will the hearing take place?</h2>
 
                         <form
@@ -207,11 +224,39 @@ Case details
 
 
 
-                            <!--  SLA  -->
-                            <div class="govuk-inset-text">
-                                5 days since SLA start date
-                            </div>
+                            <!--  SLA  NOT NEEDED FOR SSCS-->
+                            <!--
+                                <div class="govuk-inset-text">
+                                    5 days since SLA start date
+                                </div>
+                            -->
 
+                            <p class="govuk-!-margin-top-8">
+                                Availability of the parties is automatically included in this request.
+                            </p>
+
+                            {% if data.calendarclash == 'true' %}
+                                <div class="govuk-form-group govuk-form-group--error govuk-!-padding-top-3 govuk-!-padding-bottom-1" id="datesnotavailable">
+                                    <p>When the parties are unavilable.</p>
+
+                                    <p>
+                                        2 November 2021<br>
+                                        3 November 2021<br>
+                                        4 November 2021<br>
+                                        5 November 2021<br>
+                                        6 November 2021<br>
+                                        7 November 2021<br>
+                                        8 November 2021<br>
+                                        9 November 2021<br>
+                                        10 November 2021<br>
+                                        11 November 2021<br>
+                                        12 November 2021<br>
+                                        5 December 2021<br>
+                                        6 December 2021<br>
+                                        7 December 2021<br>
+                                    </p>
+                                </div>
+                            {% endif %}
 
 
                             <div class="govuk-form-group govuk-!-margin-top-5">
@@ -220,6 +265,7 @@ Case details
                                         <h3 class="govuk-fieldset__heading">
                                             Does the hearing need to take place on a specific date?
                                         </h3>
+
                                     </legend>
                                     <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
 
@@ -409,6 +455,25 @@ Case details
     </main>
 
 
+
+<div style="width:400px;">
+    <form method="post"  action="#" class="for4" style=" float: left; margin-top: 140px;">
+        <p style="margin-bottom:0px;">Error for dates clash with parties</p>
+        <select style="height:25px;" onchange="window.location.href='?'+this.value">
+
+            <option value="calendarclash=true&"
+                    {% if data.calendarclash == 'true'%}selected{% endif %}
+            >ON</option>
+
+            <option value="calendarclash=false&"
+                    {% if data.calendarclash != 'true'  %}selected{% endif %}
+            >OFF</option>
+
+        </select>
+    </form>
+
+
+</div>
 
 
 <script>
